@@ -1,4 +1,5 @@
 2.2.15
+ * Fix JDK7 compatibility broken in cassandra-2.2 (CASSANDRA-15050)
  * Support cross version messaging in in-jvm upgrade dtests (CASSANDRA-15078)
  * Fix index summary redistribution cancellation (CASSANDRA-15045)
  * Refactor Circle CI configuration (CASSANDRA-14806)
